--- a/Matcher.html
+++ b/Matcher.html
@@ -5,10 +5,23 @@
 	<meta charset="utf-8" />
 </head>
 <body>
+    <style>
+        table {
+            border-collapse: collapse;
+        }
+        table, td {
+            border: 1px solid black;
+        }
+        .separatorRow {
+            background: black;
+            color: white;
+        }
+    </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="Matcher.js"></script>
     <form id="myform">
         <input id="myfile" name="files[]" multiple="" type="file" />
     </form>
+    <div id="generatedResultsDiv"></div>
 </body>
 </html>
