--- a/Matcher.html
+++ b/Matcher.html
@@ -18,6 +18,7 @@
         }
     </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="HelperMethods.js"></script>
     <script src="Matcher.js"></script>
     <form id="myform">
         <input id="myfile" name="files[]" multiple="" type="file" />
